Wayland-Kompatibilitaet und Code-Verbesserungen
- Wayland-spezifische Properties hinzugefuegt (WLToolkit, NONREPARENTING)
- PDF-Generierung nur im PIXELATED-State erlaubt
- Code-Formatierung und Struktur verbessert